News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/NXX2_Asset_Staging__c.object-meta.xml
<CustomObject>
    <description>This will contain record of google cloud storage assets.</description>
    <label>NXX2 Asset Staging</label>
    <nameField>
        <label>NXX2 Asset Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NXX2 Assets Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>