News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Asset_Size__c.field-meta.xml
<CustomField>
    <fullName>Asset_Size__c</fullName>
    <label>Asset Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>