News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>