News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>