News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Google_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_File_Id__c</fullName>
    <label>Google File Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>