News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Google_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Folder_Id__c</fullName>
    <description>Current folder id for the asset file</description>
    <label>Google Folder Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>