News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Headline__c.field-meta.xml
<CustomField>
    <fullName>Headline__c</fullName>
    <label>Headline</label>
    <length>250</length>
    <type>Text</type>
</CustomField>