News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Related_Proof_Ad__c.field-meta.xml
<CustomField>
    <fullName>Related_Proof_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Proof Ad</label>
    <referenceTo>SocialAd__c</referenceTo>
    <relationshipLabel>NXX2 Assets Staging</relationshipLabel>
    <relationshipName>NXX2_Assets_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>