News UAT/force-app/main/default/objects/NXX2_Asset_Staging__c/fields/Seq_No__c.field-meta.xml
<CustomField>
    <fullName>Seq_No__c</fullName>
    <label>Seq No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>